--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
     <ul>
         <li><a href="./angular.html" target="_black">Sal's Pizza con AngularJS</a></li>
     </ul>     
-	<a href="http://iaw-dcic.github.io/slides/#presentation=angularjs&slide=2" target="_black">Slides</a>      
+	<a href="http://iaw-dcic.github.io/slides/#presentation=angular&slide=1" target="_black">Slides</a>      
 </div
