--- a/angular.html
+++ b/angular.html
@@ -9,6 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
         <link href="css/estilo.css" type="text/css" rel="stylesheet">
         <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="js/datosServicio.js"></script>
         <script type="text/javascript" src="js/controladorPedidos.js"></script>
         <script type="text/javascript" src="js/controladorPedido.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
